<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_margin="10dp"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btnAdd"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:backgroundTint="@android:color/darker_gray"
        android:hint="@string/add"
        android:padding="10dp"
        android:textColor="@color/black"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextCodeName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:hint="@string/android_code_name"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="16sp" />

    <EditText
        android:id="@+id/editTextAndroidVer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="5dp"
        android:autofillHints=""
        android:hint="@string/android_version"
        android:inputType="text"
        android:padding="10dp"
        android:textSize="16sp" />

    <TableLayout
        android:id="@+id/tableLayoutView"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:stretchColumns="1">

    </TableLayout>

</LinearLayout>